# ecfm

./: .gitignore  DESIGN.md  README.md  prompt.md  pyproject.toml
configs/: dvslip_finetune_grid.yaml  dvslip_linear_probe_grid.yaml  dvslip_pretrain_small.yaml  resnet_baseline.yaml  small.yaml  thu_finetune_grid.yaml  thu_linear_probe_grid.yaml  thu_pretrain_small.yaml  thu_smoke.yaml
docs/arXiv-2603.01997v1/: 00README.json  reference_manual.bib  root.tex
experiments/curve_fit_forecasting/: README.md  __init__.py  core.py  eval.py  prompt.md
scripts/: build_cleaned_tracks.py  build_cleaned_tracks_from_coordinates.py  check_coordinate_segments.py  check_coordinates_duplicates.py  cleanup_fred_event_storage.py  convert_representation_channel.py  create_assets.py  decode_evt3_raw.py  dump_region_projections.py  extract_fred_scene_images.py  finetune.py  fit_event_trace.py  fit_event_xy_trace.py  generate_config_sweep.py  images_to_media.py  linear_probe.py  render_evt3_representations.py  render_evt3_sequence.py  render_evt3_yolo_frames.py  render_fred_splits.py  resnet_baseline.py  sweep_results.py  test_rotated_projections.py  train.py
src/ecfm.egg-info/: PKG-INFO  (+2 more)
tests/: test_kalman_ml_forecasting.py  test_object_detection_centernet.py  test_object_detection_dataset.py  test_object_detection_losses.py  test_object_detection_render_sequence_video.py  test_pose_dynamics_dataset_cache.py  test_pose_dynamics_losses.py  test_pose_dynamics_model_history.py  test_pose_dynamics_train_metrics.py  test_render_evt3_yolo_frames.py  test_tokenizer.py
text/: PIPELINE.tex
(+134 files in other folders)
